cmss/e-forms/objects/Product_Relation__c/Product_Relation__c.object-meta.xml
<CustomObject>
    <label>Product Relation</label>
    <nameField>
        <displayFormat>PR-{0}</displayFormat>
        <label>Product Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>