cmss/e-forms/objects/Product_Relation__c/fields/Is_Owner_Default__c.field-meta.xml
<CustomField>
    <fullName>Is_Owner_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Owner Default</label>
    <type>Checkbox</type>
</CustomField>