cmss/e-forms/objects/Product_Relation__c/fields/Supplement__c.field-meta.xml
<CustomField>
    <fullName>Supplement__c</fullName>
    <label>Supplement</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>