cmss/e-forms/objects/Product_Relation__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <label>Theme</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>