cmss/e-forms/objects/Product_Relation__c/recordTypes/Account_Migration.recordType-meta.xml
<RecordType>
    <fullName>Account_Migration</fullName>
    <active>true</active>
    <label>Migrace účtu</label>
</RecordType>