cmss/e-forms/objects/Product_Relation__c/recordTypes/BO_Task_ELB_Connect.recordType-meta.xml
<RecordType>
    <fullName>BO_Task_ELB_Connect</fullName>
    <active>true</active>
    <label>BO_Task_ELB_Connect</label>
</RecordType>