cmss/e-forms/objects/Product_Relation__c/recordTypes/CSOBS_contract_cancelation.recordType-meta.xml
<RecordType>
    <fullName>CSOBS_contract_cancelation</fullName>
    <active>true</active>
    <label>CSOBS contract cancelation</label>
</RecordType>