cmss/e-forms/objects/Product_Relation__c/recordTypes/CSOBS_target_amount_allocation.recordType-meta.xml
<RecordType>
    <fullName>CSOBS_target_amount_allocation</fullName>
    <active>true</active>
    <label>CSOBS target amount allocation</label>
</RecordType>