cmss/e-forms/objects/Product_Relation__c/recordTypes/Exception_PA.recordType-meta.xml
<RecordType>
    <fullName>Exception_PA</fullName>
    <active>true</active>
    <label>Exception PA</label>
</RecordType>