cmss/e-forms/objects/Product_Relation__c/recordTypes/Exception_SA.recordType-meta.xml
<RecordType>
    <fullName>Exception_SA</fullName>
    <active>true</active>
    <label>Exception SA</label>
</RecordType>