cmss/e-forms/objects/Product_Relation__c/recordTypes/FIB_Deponace_TP.recordType-meta.xml
<RecordType>
    <fullName>FIB_Deponace_TP</fullName>
    <active>true</active>
    <label>FIB Deponace TP</label>
</RecordType>