cmss/e-forms/objects/Product_Relation__c/recordTypes/FOP_Migration.recordType-meta.xml
<RecordType>
    <fullName>FOP_Migration</fullName>
    <active>true</active>
    <label>FOP_Migration</label>
</RecordType>