cmss/e-forms/objects/Product_Relation__c/recordTypes/FormOrder_Asset_Conf.recordType-meta.xml
<RecordType>
    <fullName>FormOrder_Asset_Conf</fullName>
    <active>true</active>
    <label>FormOrder Asset Conf</label>
</RecordType>