cmss/e-forms/objects/Product_Relation__c/recordTypes/FormOrder_Avizo_ZPS.recordType-meta.xml
<RecordType>
    <fullName>FormOrder_Avizo_ZPS</fullName>
    <active>true</active>
    <label>FormOrder Avizo ZPS</label>
</RecordType>