cmss/e-forms/objects/Product_Relation__c/recordTypes/General_Backoffice_Query.recordType-meta.xml
<RecordType>
    <fullName>General_Backoffice_Query</fullName>
    <active>true</active>
    <label>General_Backoffice_Query</label>
</RecordType>