cmss/e-forms/objects/Product_Relation__c/recordTypes/Heritage.recordType-meta.xml
<RecordType>
    <fullName>Heritage</fullName>
    <active>true</active>
    <label>Heritage</label>
</RecordType>