cmss/e-forms/objects/Product_Relation__c/recordTypes/Investment_Calculator.recordType-meta.xml
<RecordType>
    <fullName>Investment_Calculator</fullName>
    <active>true</active>
    <label>Investment Calculator</label>
</RecordType>