cmss/e-forms/objects/Product_Relation__c/recordTypes/Migration_Premium.recordType-meta.xml
<RecordType>
    <fullName>Migration_Premium</fullName>
    <active>true</active>
    <label>Migration Premium</label>
</RecordType>