cmss/e-forms/objects/Product_Relation__c/recordTypes/Mobility_income.recordType-meta.xml
<RecordType>
    <fullName>Mobility_income</fullName>
    <active>true</active>
    <description>IPA - mobilita příchozí projekt</description>
    <label>Mobilita příchozí</label>
</RecordType>