cmss/e-forms/objects/Product_Relation__c/recordTypes/OSU.recordType-meta.xml
<RecordType>
    <fullName>OSU</fullName>
    <active>true</active>
    <description>Oznámení škodní události</description>
    <label>OSU</label>
</RecordType>