cmss/e-forms/objects/Product_Relation__c/recordTypes/Saving_Account.recordType-meta.xml
<RecordType>
    <fullName>Saving_Account</fullName>
    <active>true</active>
    <label>Saving Account</label>
</RecordType>