cmss/e-forms/objects/Product_Relation__c/recordTypes/Smartbanking_PIR.recordType-meta.xml
<RecordType>
    <fullName>Smartbanking_PIR</fullName>
    <active>true</active>
    <label>Smartbanking PIR</label>
</RecordType>