cmss/e-forms/objects/Product_Relation__c/recordTypes/SUFO_Sales.recordType-meta.xml
<RecordType>
    <fullName>SUFO_Sales</fullName>
    <active>true</active>
    <description>SUFO Sales process</description>
    <label>SUFO Sales</label>
</RecordType>