cmss/e-forms/objects/Product_Relation__c/listViews/acc_migrs_plus_konto.listView-meta.xml
<ListView>
    <fullName>acc_migrs_plus_konto</fullName>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Default_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Relation__c.Migration_Premium</value>
    </filters>
    <filters>
        <field>From__c</field>
        <operation>contains</operation>
        <value>Poštovní</value>
    </filters>
    <label>Migrace premium_Plus konto</label>
    <language>en_US</language>
</ListView>