cmss/e-forms/objects/Product_Relation__c/listViews/All_create.listView-meta.xml
<ListView>
    <fullName>All_create</fullName>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Default_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Create</value>
    </filters>
    <label>All_create</label>
    <language>en_US</language>
</ListView>