cmss/e-forms/objects/Product_Relation__c/listViews/All_keep.listView-meta.xml
<ListView>
    <fullName>All_keep</fullName>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Default_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Keep</value>
    </filters>
    <label>All_keep</label>
    <language>en_US</language>
</ListView>