cmss/e-forms/objects/Product_Relation__c/listViews/AllOSU.listView-meta.xml
<ListView>
    <fullName>AllOSU</fullName>
    <columns>NAME</columns>
    <columns>Default_Name__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Relation__c.OSU</value>
    </filters>
    <label>All_OSU</label>
</ListView>