cmss/e-forms/objects/Product_Relation__c/listViews/generalBo.listView-meta.xml
<ListView>
    <fullName>generalBo</fullName>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Default_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Relation__c.General_Backoffice_Query</value>
    </filters>
    <label>General BO</label>
    <language>en_US</language>
</ListView>