cmss/e-forms/objects/Product_Relation__c/listViews/kal_kulajda.listView-meta.xml
<ListView>
    <fullName>kal_kulajda</fullName>
    <columns>NAME</columns>
    <columns>Default_Name__c</columns>
    <columns>Base__c</columns>
    <columns>Supplement__c</columns>
    <columns>Theme__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Relation__c.Investment_Calculator,Product_Relation__c.Investment_Calculator_Config</value>
    </filters>
    <label>Investiční kalkulačka</label>
    <language>en_US</language>
</ListView>