cmss/e-forms/objects/Product_Relation__c/listViews/Mobilita_prichozi.listView-meta.xml
<ListView>
    <fullName>Mobilita_prichozi</fullName>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>Default_Name__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Base__c</columns>
    <columns>External_ID__c</columns>
    <columns>Is_Dispatcher_Default__c</columns>
    <columns>Is_Owner_Default__c</columns>
    <columns>Record_Type_Name__c</columns>
    <columns>Supplement__c</columns>
    <columns>Theme__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Relation__c.Mobility_income</value>
    </filters>
    <label>Mobilita příchozí</label>
    <language>en_US</language>
</ListView>