cmss/e-forms/objects/Product_Relation__c/listViews/Ozn_men_o_mrt.listView-meta.xml
<ListView>
    <fullName>Ozn_men_o_mrt</fullName>
    <columns>NAME</columns>
    <columns>Default_Name__c</columns>
    <columns>From__c</columns>
    <columns>To__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Product_Relation__c.Death_announcement</value>
    </filters>
    <label>Oznámení o úmrtí</label>
    <language>cs</language>
</ListView>